<resources>
    <string name="app_name">Cherry Hill</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="eruv">Eruv Map</string>
    <string name="shuls">Shuls</string>
    <string name="schools">Schools</string>
    <string name="websites">Websites</string>
    <string name="restaurants">Restaurants</string>
    <string name="welcome">Welcome to Cherry Hill</string>
</resources>
