<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/eruv_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/eruv"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/shul_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/shuls"
        android:textSize="20sp"
        />


    <TextView
        android:id="@+id/school_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/schools"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/websites_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/websites"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/restaurant_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/restaurants"
        android:textSize="20sp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:scaleType="centerCrop"
            android:src="@drawable/cherryhilltrees"/>
    </RelativeLayout>
</LinearLayout>
